bluec-tests/tests/valid/stmt_loops/for_multiple_decl_2.c
int main(void) {
    int x = 0;
    for (int i = 1, j = i + 5; i < 10; ++i) {
        j++;
        x = j;
    }
    return x;
}
