bluec-tests/tests/invalid/types_fn_pointer/assign_to_address.c
int get(void) {
    return 1;
}

int main(void)
{
    &get = 10;
}